...
          .filter()
          .ganaIdEqualTo(ganaId)
          .and()
          .removedAtIsNull()
          .findFirst();
      if (row == null) {
        return const Left(Failure.notFoundFailure('Gana not found'));
      }
      return Right(row.toDomain());
    } catch (e) {
      return Left(Failure.errorFailure(e.toString()));
    }
  }
...
